# azure-kusto-avro-conv

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LinuxPackage.nuspec  Package.nuspec  README.md  build.bat
.github/workflows/: build.yml  codeql.yml
src/: avro2json.c  avro2json.cc  avro_private.h  logical.c  logical.h
tests/: columns-1.json  columns-2.json  columns-3-non-existing-columns.csv  columns-3-non-existing-columns.json  columns-3.csv  columns-4.csv  columns-4.json  columns.avro  dates-l.csv  dates-l.json  dates.avro  datetimes-from-unix.avro  datetimes-from-unix.csv  datetimes-from-unix.json  datetimes-l.csv  datetimes-l.json  datetimes.avro  decimals-bytes-l.csv  decimals-bytes-l.json  decimals-bytes.avro  decimals-bytes.csv  decimals-bytes.json  decimals-l.csv  decimals-l.json  decimals.avro  decimals.csv  decimals.json  escaping.avro  escaping.csv  escaping.json  file1-p.json  file1.avro  file1.csv  file1.json  reals.avro  reals.csv  reals.json  run.sh
